[package]
name = "soroban_merkleproof"
version = "0.1.0"
authors = ["palinko <arpad.palinkas@gmail.com>"]
description = "openzeppelin-contracts/MerkleProof.sol Soroban implementation"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soroban_merkleproof"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.2.1"
merkletreers = "0.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev_dependencies]
soroban-sdk = { version = "0.2.1", features = ["testutils"] }

[[example]]
name = "whitelist"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
